Made some change to the event page.  This includes a new participate now deal, bug with breadcrumbs not showing when there are now questions, and some legibility problems.

--- a/trunk/css/all2.css
+++ b/trunk/css/all2.css
@@ -332,6 +332,13 @@ textarea.txt {
 	margin-top: 3px;
 	margin-bottom: 6px;
 }
+
+#participate_live_div {
+	/* used on view_events.php page */
+	padding: 6px;
+	border: 1px solid #C1D8EA;
+	text-align: center;
+}
 /******************Content*******************/
 #admin_content {
 	margin:0 11px 0 9px;
